apply plugin: 'com.android.application'
apply plugin: 'com.mikepenz.aboutlibraries.plugin'

android {
    compileSdkVersion 29
    buildToolsVersion '29.0.2'

    defaultConfig {
        applicationId "se.splushii.dancingbunnies"
        minSdkVersion 26
        targetSdkVersion 29
        versionCode 6
        versionName "0.1.0"
        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }
    signingConfigs {
        debug {
            keyAlias "debugKey"
            keyPassword "debugpassword"
            storeFile file("../debug.jks")
            storePassword "debugpassword"
        }
        release {
            keyAlias "releaseKey"
            keyPassword System.getenv("KEYPWD")
            storeFile file(System.getenv("KEYSTOREPATH") ?: "release.jks")
            storePassword System.getenv("KEYSTOREPWD")
        }
    }
    buildTypes {
        debug {
            resValue "string", "app_name", "debug Bunnies"
            resValue "string", "app_name_logo", "db"
            signingConfig signingConfigs.debug
            applicationIdSuffix ".debug"
            debuggable true
            minifyEnabled false
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        release {
            resValue "string", "app_name", "dancing Bunnies"
            resValue "string", "app_name_logo", "dB"
            signingConfig signingConfigs.release
            minifyEnabled false
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
    implementation "androidx.room:room-runtime:2.2.5"
    annotationProcessor "androidx.room:room-compiler:2.2.5"
    implementation "androidx.work:work-runtime:2.4.0"
    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'androidx.mediarouter:mediarouter:1.1.0'
    implementation 'androidx.recyclerview:recyclerview:1.1.0'
    implementation 'androidx.recyclerview:recyclerview-selection:1.0.0'
    implementation 'androidx.preference:preference:1.1.1'

    implementation 'com.google.android.material:material:1.1.0'
    implementation 'com.android.volley:volley:1.1.1'
    implementation 'com.google.android.gms:play-services-cast-framework:18.1.0'

    implementation "com.mikepenz:aboutlibraries-core:8.1.0"
    implementation "com.mikepenz:aboutlibraries:8.1.0"

    implementation "com.networknt:json-schema-validator:1.0.40"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.11.0"

    implementation "org.eclipse.jgit:org.eclipse.jgit:5.7.0.202003110725-r"

    implementation 'commons-io:commons-io:2.7'

    testImplementation 'junit:junit:4.12'

    // Android is missing ClassValue. Needed to update Lucene.
    implementation 'org.apache.lucene:lucene-core:4.8.1'
    implementation 'org.apache.lucene:lucene-queryparser:4.8.1'
    implementation 'org.apache.lucene:lucene-analyzers-common:4.8.1'
}
